--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,13 @@ services:
     image: vuttr-api:1.0.0
     build:
       context: .
-      target: development
       dockerfile: Dockerfile
-    command: npm run start:debug
+    command: npm run start
     environment:
-      # localhost
-      DATABASE_URL: 'mysql'
-      NODE_ENV: development
-      PORT: 3000
+      NODE_ENV: dev
     ports:
-      - 3000:3000
-      - 9229:9229
-    restart: unless-stopped
+      - "3000:3000"
+    restart: always
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
@@ -28,8 +23,15 @@ services:
     container_name: vuttr-database
     image: mysql:8
     restart: unless-stopped
+    ports:
+      - 3306:3306
+      - 3308:3308
+    volumes:
+      - db-volume:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+volumes:
+  db-volume:
