--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,6 @@ services:
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DB_HOST=${MYSQL_DB_HOST}
 volumes:
   db-volume:
